image size same in compare and results page, better slide and some bug fixes

--- a/asset/imcomp/index.html
+++ b/asset/imcomp/index.html
@@ -347,8 +347,8 @@
               <img id="left_content_image" src="">
             </div>
 
-            <div id="horizontal_slider" class="img-comp-hor-slider display-none"></div>
-            <div id="vertical_slider" class="img-comp-vert-slider display-none"></div>
+            <div id="horizontal_slider" class="img-comp-hor-slider display-none"> &harr; </div>
+            <div id="vertical_slider" class="img-comp-vert-slider display-none"> &varr; </div>
             <div id="hor_slide_overlay" class="content img-comp-img">
               <img id="hor_slide_overlay_img" src="">
             </div>
