--- a/asset/imcomp/index.html
+++ b/asset/imcomp/index.html
@@ -6,6 +6,27 @@
   <meta name="author" content="Abhishek Dutta">
   <meta name="description" content="Image Comparator (imcomp) is a tool to compare images.">
 
+  <!--
+  Development of IMCOMP is supported by the EPSRC programme grant
+  Seebibyte: Visual Search for the Era of Big Data (EP/M013774/1).
+  Using Google Analytics, we record the usage of this application.
+  A summary of this data is used in reporting of this programme grant
+  and research publications related to the VIA software.
+
+  If you do not wish to share this data, you can safely remove the
+  javascript code below.
+  -->
+  <script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new
+       Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+     ga('create', 'UA-20555581-2', 'auto');
+     ga('set', 'page', '/imcomp/imcomp-1.0.0');
+     ga('send', 'pageview');
+  </script>
+
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="./imcomp.css" />
 </head>
