--- a/asset/imcomp/index.html
+++ b/asset/imcomp/index.html
@@ -110,8 +110,9 @@
 
     <select name="transform" id="trnasformation_select">
       <option value="affine">Select a Transform</option>
-      <!-- <option value="identity">Identity</option>
-      <option value="translation">Translation</option> -->
+      <option value="identity">Identity</option>
+      <option value="rigid">Rigid</option>
+      <option value="similarity">Similarity</option>
       <option value="affine">Affine</option>
       <option value="tps">Thin Plate Spline</option>
     </select>
